I added styles.css file and content, h2 html also

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>IA Draw</title>
   </head>
   <body>
     <h1>IA Draw</h1>
+    <h2>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates ab, necessitatibus amet
+      consequatur rerum voluptatum, eaque magni at inventore odit nisi numquam voluptas impedit
+      pariatur aliquid neque itaque delectus? Hic.
+    </h2>
     <canvas id="canvas" width="800" height="800"></canvas>
   </body>
 </html>
