--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
       pariatur aliquid neque itaque delectus? Hic.
     </h2>
     <canvas id="canvas" width="800" height="800"></canvas>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi architecto fuga magni
+      repellendus mollitia ipsa cum consequatur, incidunt dolorem magnam maiores ex amet aperiam
+      officia suscipit illum consequuntur earum blanditiis!
+    </p>
   </body>
 </html>
